# bet-wise

./: .gitignore  README.md  RUST_ENGINE_INTEGRATION.md  docker-compose.yml  fix_trading_engine.sh  next.config.js  next.config.ts  package-lock.json  package.json  server.js  start.sh  tailwind.config.js
rust-trading-engine/: Cargo.toml  Dockerfile  INTEGRATION.md  README.md  diesel.toml  setup_database.sh  setup_db.sql
rust-trading-engine/migrations/: 001_create_tables.sql
rust-trading-engine/migrations/2023-01-01-000000_create_tables/: down.sql  up.sql
rust-trading-engine/migrations/2023-01-02-000000_create_user_balances/: up.sql
rust-trading-engine/src/: lib.rs  main.rs  simple_main.rs
rust-trading-engine/src/api/: mod.rs  routes.rs  websocket.rs
rust-trading-engine/src/db/: connection.rs  mod.rs  repository.rs  schema.rs
rust-trading-engine/src/models/: balance.rs  market.rs  mod.rs  order.rs  position.rs  trade.rs
rust-trading-engine/src/services/: balance_service.rs  bot_service.rs  matching_engine.rs  mod.rs  order_service.rs  settlement_service.rs
rust-trading-engine/src/services/matching/: mod.rs  order_matcher.rs
rust-trading-engine/src/services/position/: mod.rs  position_manager.rs
rust-trading-engine/src/services/pricing/: market_pricer.rs  mod.rs
rust-trading-engine/src/services/websocket/: mod.rs  server.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/dashboard/: page.tsx
src/app/markets/: page.tsx
src/app/orders/: page.tsx
src/app/positions/: page.tsx
src/app/profile/: page.tsx
src/app/sports/: page.tsx
src/app/wallet/: page.tsx
src/components/: EvervaultCard.tsx  RetroGrid.tsx
src/components/analytics/: TradingDashboard.tsx
src/components/cricket/: CricketMarketView.tsx  CricketOrderBook.tsx  CricketPriceChart.tsx  CricketScorecard.tsx  FixturesList.tsx
src/components/dashboard/: Header.tsx  MarketList.tsx
src/components/markets/: AdvancedTradeClient.tsx  ConditionalOrderForm.tsx  MarketDetailClient.tsx  OrderBook.tsx  OrderForm.tsx  PositionSizingTool.tsx  PriceChart.tsx
src/components/sports/: LiveGameView.tsx  UpcomingGames.tsx
src/lib/: auth.ts  firebase.ts
src/lib/clients/: trading-engine-client.ts
src/lib/db/: index.ts  migrate-cricket.ts  migrate.ts  schema.ts
src/lib/hooks/: useCricketData.ts  useDemoTrading.ts  useMarketSentiment.ts  useSocket.ts
src/lib/models/: market.ts  odds-calculator.ts  order.ts  position.ts
src/lib/services/: market-pricing.ts  order-matching.ts
src/providers/: toast-provider.tsx
src/scripts/: update-schema.ts
src/types/: global.d.ts  next-auth.d.ts
(+72 files in other folders)
