[package]
name = "trading-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "trading_engine"
path = "src/lib.rs"

[[bin]]
name = "trading-server"
path = "src/main.rs"

[[bin]]
name = "simple-trading-server"
path = "src/simple_main.rs"

[dependencies]
# Core functionality
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# Web server
actix-web = "4.4.1"
actix-rt = "2.9.0"
actix-cors = "0.6.5"
actix-web-actors = "4.2.0"

# Websockets 
actix = "0.13.1"

# Database connectivity
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "rust_decimal"] }
deadpool-postgres = "0.11.0"
tokio-postgres = "0.7.10"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
env_logger = "0.10"
async-trait = "0.1"
num_cpus = "1.16.0"
