[package]
name = "prediction-engine"
version = "0.1.0"
edition = "2021"
authors = ["Trading Engine Team"]
description = "A Rust-based trading engine for prediction markets like Probo"

[dependencies]
# Core dependencies
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Async and concurrency tools
async-trait = "0.1.74"
futures = "0.3.29"
tokio-stream = { version = "0.1.14", features = ["sync"] }
parking_lot = "0.12.1"

# Web and networking
warp = "0.3.6"
reqwest = { version = "0.11.22", features = ["json"] }
tokio-tungstenite = "0.20.1"

# Database - replacing Diesel with SQLx
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal", "json"] }
deadpool = "0.10.0"
deadpool-postgres = "0.11.0"

# Logging and monitoring
env_logger = "0.10.1"
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Utilities
rust_decimal = { version = "1.33.1", features = ["serde-with-str"] }
rand = "0.8.5"
thiserror = "1.0.51"
anyhow = "1.0.76"
dotenv = "0.15.0"

[dev-dependencies]
# Testing
tokio-test = "0.4.3"
mockall = "0.11.4"
criterion = "0.5.1"

[[bin]]
name = "prediction-engine"
path = "src/main.rs"

[lib]
name = "prediction_engine"
path = "src/lib.rs"
